Issue #238 - Added .active to general file high contrast elements as they overwrite the bootstrap .active behaviour

--- a/public/styles/General.css
+++ b/public/styles/General.css
@@ -306,7 +306,8 @@ body {
 }
 
 .high-contrast-mode .navbar-toggler:hover,
-.high-contrast-mode .navbar-toggler:focus-visible{
+.high-contrast-mode .navbar-toggler:focus-visible,
+.high-contrast-mode .navbar-toggler:active {
   border: 1px solid var(--hover-border-color);
 }
 
@@ -316,7 +317,8 @@ body {
 }
 
 .high-contrast-mode .dropdown-menu:hover,
-.high-contrast-mode .dropdown-menu:focus-visible {
+.high-contrast-mode .dropdown-menu:focus-visible,
+.high-contrast-mode .dropdown-menu:active {
   background-color: var(--navbar-bg);
 }
 
@@ -330,7 +332,8 @@ body {
 }
 
 .high-contrast-mode .dropdown-menu a:hover,
-.high-contrast-mode .dropdown-menu a:focus-visible {
+.high-contrast-mode .dropdown-menu a:focus-visible,
+.high-contrast-mode .dropdown-menu a:active {
   background-color: var(--secondary-bg);
   outline: 2px solid var(--hover-border-color);
 }
@@ -341,7 +344,8 @@ body {
 }
 
 .high-contrast-mode .btn-primary:hover,
-.high-contrast-mode .btn-primary:focus-visible {
+.high-contrast-mode .btn-primary:focus-visible,
+.high-contrast-mode .btn-primary:active {
   border: 2px solid var(--button-border-color);
 }
 
@@ -350,7 +354,8 @@ body {
 }
 
 .high-contrast-mode .btn-outline-primary:hover,
-.high-contrast-mode .btn-outline-primary:focus-visible {
+.high-contrast-mode .btn-outline-primary:focus-visible,
+.high-contrast-mode .btn-outline-primary:active {
   border: 2px solid var(--button-border-color) !important;
 }
 
@@ -361,7 +366,8 @@ body {
 }
 
 .high-contrast-mode .btn-secondary:hover,
-.high-contrast-mode .btn-secondary:focus-visible {
+.high-contrast-mode .btn-secondary:focus-visible,
+.high-contrast-mode .btn-secondary:active {
   background-color: #222222;
   border: 2px solid var(--hover-border-color);
 }
@@ -372,7 +378,8 @@ body {
 }
 
 .high-contrast-mode .btn-outline-secondary:hover,
-.high-contrast-mode .btn-outline-secondary:focus-visible {
+.high-contrast-mode .btn-outline-secondary:focus-visible,
+.high-contrast-mode .btn-outline-secondary:active {
   background-color: #222222;
   border: 2px solid var(--hover-border-color);
 }
@@ -386,7 +393,8 @@ body {
 }
 
 .high-contrast-mode #themesSelection:hover,
-.high-contrast-mode #themesSelection:focus-visible {
+.high-contrast-mode #themesSelection:focus-visible,
+.high-contrast-mode #themesSelection:active {
   border: 2px solid var(--hover-border-color);
 }
 
